# LogicSim

./: CMakeLists.txt  DragAndDrop.cpp  DragAndDrop.hpp  README.md  ShortcutManager.cpp  ShortcutManager.hpp  Simulator.cpp  Simulator.hpp  main.cpp
Assets/: AND.hpp  Assets.hpp  BUF.h  Button0.hpp  Button1.h  CLK.h  Led0.h  Led1.h  NAND.h  NOR.hpp  NOT.h  OR.hpp  XNOR.h  XOR.hpp
